package org.example.flights.domain;

public enum FlightStatus {
    SCHEDULED,
    FLYING,
    DELAYED,
    COMPLETED,
    CANCELED
}